# ProjetJeuDeLaVie_POO

./: CMakeLists.txt  Cell.cpp  Cell.h  ConsoleDisplay.cpp  ConsoleDisplay.h  DisplayManager.cpp  DisplayManager.h  FileHandler.cpp  FileHandler.h  GameManager.cpp  GameManager.h  GraphicalDisplay.cpp  GraphicalDisplay.h  Grid.cpp  Grid.h  InterfaceGraphique.h  README.md  game.cpp  game.h  main.cpp
Code/CPP/: ConsoleDisplay.cpp  FileHandler.cpp  GraphicalDisplay.cpp  Grid.cpp  RleReader.cpp  ThreadPool.cpp  game.cpp  main.cpp
Code/Headers/: Cell.h  ConsoleDisplay.h  FileHandler.h  GraphicalDisplay.h  RleReader.h  ThreadPool.h  game.h
Diagrammes/: DiagrammeDeClasse_MermaidEditor.txt
Linux-Build/: CMakeLists.txt
Linux-Build/Code/CPP/: Cell.cpp  ConsoleDisplay.cpp  DisplayManager.cpp  FileHandler.cpp  GraphicalDisplay.cpp  Grid.cpp  RleReader.cpp  ThreadPool.cpp  game.cpp  main.cpp
Linux-Build/Code/Headers/: Cell.h  GraphicalDisplay.h  game.h
Linux-Build/Diagrammes/: Diagramme_De_Classe_Mermaid.json
Linux-Build/tests/: test_Game.cpp  test_RleReader.cpp  test_ThreadPool.cpp
Windows-Build/: output_grid.txt
Windows-Build/Code/CPP/: DisplayManager.cpp  FileHandler.cpp  GraphicalDisplay.cpp  game.cpp  main.cpp
Windows-Build/Code/Headers/: FileHandler.h  game.h
Windows-Build/tests/: test_Game.cpp  test_GraphicalDisplay.cpp  test_Grid.cpp  test_RleReader.cpp
tests/: test_Cell.cpp  test_ConsoleDisplay.cpp  test_DisplayManager.cpp  test_FileHandler.cpp
